--- a/FlappyBirdCSharp/FlappyBirdCSharp.csproj
+++ b/FlappyBirdCSharp/FlappyBirdCSharp.csproj
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -85,6 +86,12 @@
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestWin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TestWin.Designer.cs">
+      <DependentUpon>TestWin.cs</DependentUpon>
+    </Compile>
     <Compile Include="UCUtils\NeuralNetworkControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -110,6 +117,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="TestWin.resx">
+      <DependentUpon>TestWin.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UCUtils\NeuralNetworkControl.resx">
       <DependentUpon>NeuralNetworkControl.cs</DependentUpon>
     </EmbeddedResource>
@@ -148,5 +158,9 @@
   <ItemGroup>
     <Content Include="Resources\arcade-music-loop.wav" />
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
